--- a/DO/Protokoll/DO_Protokoll_main.tex
+++ b/DO/Protokoll/DO_Protokoll_main.tex
@@ -1,76 +1,32 @@
 \documentclass[11pt,a4paper]{report}
 \usepackage{ucs}
-\usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage[utf8x]{inputenc}
 \usepackage[german]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{shadethm}
 
-
+\newshadetheorem{sdefinition}{Definition}
+\newenvironment{definition}[1][]{%
+  \definecolor{shadethmcolor}{rgb}{.9,.9,.9}%
+  \definecolor{shaderulecolor}{rgb}{1.0,0.0,0.0}%
+  \setlength{\shadeboxrule}{1pt}%
+  \begin{sdefinition}[#1]%
+}{\end{sdefinition}}
 
 \begin{document}
 
-%----------------------------------------------------------------------------------------
-%	Titlepage
-%----------------------------------------------------------------------------------------
-\begin{titlepage}
-\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
-
-\center % Center everything on the page
- 
-%----------------------------------------------------------------------------------------
-%	HEADING SECTIONS
-%----------------------------------------------------------------------------------------
-
-\textsc{\LARGE TU Dresden}\\[1.5cm] % Name of your university/college
-\textsc{\Large Fortgeschrittenenpraktikum}\\[0.5cm] % Major heading such as course name
-\textsc{\Large Praktikumsbericht}\\[0.5cm] % Major heading such as course name
-
-%----------------------------------------------------------------------------------------
-%	TITLE SECTION
-%----------------------------------------------------------------------------------------
-
-\HRule \\[0.4cm]
-{ \huge \bfseries Dosimetrie}\\[0.4cm] % Title of your document
-\HRule \\[1.5cm]
- 
-%----------------------------------------------------------------------------------------
-%	AUTHOR SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{minipage}{0.4\textwidth}
-\begin{flushleft} \large
-\emph{Author:}\\
-Toni \textsc{Ehmcke}\\
-Christian \textsc{Siegel}
-\end{flushleft}
-\end{minipage}
-~
-\begin{minipage}{0.4\textwidth}
-\begin{flushright} \large
-\emph{Betreuer:} \\
-Birgit \textsc{Schneider} % Supervisor's Name
-\end{flushright}
-\end{minipage}\\[4cm]
-
-%----------------------------------------------------------------------------------------
-%	DATE SECTION
-%----------------------------------------------------------------------------------------
-
-{\large Dresden, \today}\\[3cm] % Date, change the \today to a set date if you want to be precise
-
-\vfill 
-
-\end{titlepage}
+\include{DO_Protokoll_title} 	% Titelseite
 
 \tableofcontents
 
-\chapter{Einführung}
-\chapter{Aufgabenstellung}
-\chapter{Physikalischer Hintergrund}
-\chapter{Durchführung}
-\chapter{Auswertung}
+\input{DO_Protokoll_einf} 		% Einführung
+\input{DO_Protokoll_aufg}		% Aufgabenstellung
+\input{DO_Protokoll_phys}		% Physikalischer Hintergrund
+\input{DO_Protokoll_df}			% Durchführung
+\input{DO_Protokoll_ausw}		% Auswertung
 
 \end{document}
