--- a/DO/Protokoll/DO_Protokoll_phys.tex
+++ b/DO/Protokoll/DO_Protokoll_phys.tex
@@ -1,8 +1,8 @@
-\chapter{Physikalischer Hintergrund}
-\section{Strahlungsfeldgrößen}
+\section{Physikalischer Hintergrund}
+\subsection{Strahlungsfeldgrößen}
 Zunächst definieren wir einige Größen zur Charakterisierung  von Strahlungsfeldern.
 
-\begin{definition}[Teilchenbezogene Größen]
+\begin{definition}[Teilchenbezogene Größen].\\
 Die \underline{Teilchenflussdichte} $\varphi$ ist defininiert als:
 \begin{equation*}
 	\varphi = \frac{\mathrm{d}^2N}{\mathrm{d}A_{\perp} \cdot \mathrm{d}t},\ [\varphi] = 1/m^2s
@@ -26,7 +26,7 @@ Analog definiert man die \underline{Energiefluenz} $\Psi$:
 \end{equation*}
 \end{definition}
 
-\section{Dosisgrößen}
+\subsection{Dosisgrößen}
 Wir definieren nun die wesentlichen Größen zur Charakterisierung der Wechselwirkung/Schädigung von Materie mit ionisierender Strahlung.
 
 \begin{definition}[Dosisgrößen].\\
@@ -41,14 +41,14 @@ Will man berücksichtigen, dass die Schädigung biologischen Gewebes sowohl von 
 \end{equation}
 \end{definition}
 
-\section{Aktivitätsgrößen}
+\subsection{Aktivitätsgrößen}
 Um die Dosisleistung für die gegebenen $\gamma$-Strahler in Aufgabe 2.3 abzuschätzen, benötigen wir die \underline{Aktivität A} als Maß für die Anzahl der spontanen Kernumwandlungen pro Zeiteinheit. Mit dem exponentiellen Zerfallsgesetz erhalten wir:
 \begin{equation}
 	A(t)=A(t=0) \cdot \left(\frac{1}{2}\right)^{\frac{t}{T_{1/2}}}, [A] = 1/s \equiv Bq \textrm{(Bequerel)}
 \end{equation}
 Hier bei ist $T_{1/2}$ die Halbwertszeit des gegebenen Isotops.
 
-\section{Messprinzip: Ionisationskammer}
+\subsection{Messprinzip: Ionisationskammer}
 Grob gesprochen ist eine Ionisationskammer ein (beliebig geformter) Kondensator, dessen Dielektrikum gasförmig (in unserem Fall Luft) vorliegt. Tritt ionisierende Strahlung in das Kammervolumen, so entstehen durch Wechselwirkung mit den Gasteilchen Elektronen-Ionen-Paare (Primärteilchen). Die dabei herausgelösten Ladungsträger gelangen nun im Idealfall durch Coulomb-Wechselwirkung zu einer Kondensatorplatte, wo sie nun als Stromfluss I nachgewiesen werden können. Wie wir später sehen werden ist der Stromfluss proportional zu unserer zu ermittelnden Dosis.\\ 
 Ist die Kondensatorspannung (und somit auch die Feldstärke) zu niedrig, bewegen sich die geladenen Teilchen zu langsam und die Rekombinations-Wahrscheinlichkeit steigt. Ist sie andererseits zu groß, werden die Primärteilchen zu stark beschleunigt, sodass sie lawinenartig weitere Ionisationen auslösen und Sekundärladungsträger erzeugen. Beide Fälle würden die Messung verfälschen, wodurch man eine Kompromisslösung im sogenannten Sättigungsbereich finden muss.\\
 Bezeichnen wir den mittleren Energieaufwand pro Ionisation mit w, den Gesamtenergieaufwand mit E und die Anzahl der Ionisationen mit N, erhalten wir mit Definition \eqref{eq:dosis} die für Aufgabe 2.2 entscheidende Formel:
@@ -58,12 +58,13 @@ Bezeichnen wir den mittleren Energieaufwand pro Ionisation mit w, den Gesamtener
 \begin{equation}
 	D = \frac{\textrm{d}E}{\textrm{d}m}=\frac{E}{m}=\frac{w \cdot N}{\rho \cdot V}
 \end{equation}
+
 \begin{equation}
 	I = e \cdot \dot{N}: \dot{D} = \frac{w}{e \cdot \rho \cdot V} \cdot I
 \end{equation}
 Das heißt für näherungsweise konstante Dosisleistungen im Zeitintervall $\Delta t$ erhalten wir die Proportialität zwischen dem Stromfluss und der Dosis:
 \begin{equation}
-	D = \int \limits_{t_1}^{t_2} \dot{D}(t)\ \mathrm{d}t \approx \frac{w \cdot \Delta t}{e \cdot \rho \cdot V} \cdot I
+	D(t) = D(t_0) + \int \limits_{t_0}^{t} \dot{D}(\tau) \mathrm{d}\tau \approx \frac{w \cdot \Delta t}{e \cdot \rho \cdot V} \cdot I
 \end{equation}
 Nun wollen wir noch die Abhängigkeit des Ergebnisses vom Druck p und der Temperatur T berücksichtigen:
 \begin{equation}
