--- a/DO/Protokoll/DO_Protokoll_main.tex
+++ b/DO/Protokoll/DO_Protokoll_main.tex
@@ -23,10 +23,11 @@
 
 \tableofcontents
 
-\include{DO_Protokoll_einf} 		% Einführung
+\include{DO_Protokoll_einf} 	% Einführung
 \input{DO_Protokoll_aufg}		% Aufgabenstellung
 \input{DO_Protokoll_phys}		% Physikalischer Hintergrund
 \input{DO_Protokoll_df}			% Durchführung
 \input{DO_Protokoll_ausw}		% Auswertung
+\include{DO_Protokoll_lit}
 
 \end{document}
