--- a/DO/Protokoll/DO_Protokoll_main.tex
+++ b/DO/Protokoll/DO_Protokoll_main.tex
@@ -8,6 +8,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{shadethm}
+\usepackage{caption}
 
 \newshadetheorem{sdefinition}{Definition}
 \newenvironment{definition}[1][]{%
@@ -17,13 +18,16 @@
   \begin{sdefinition}[#1]%
 }{\end{sdefinition}}
 
+\newcommand{\minipanf}{\begin{minipage}{\linewidth}} % Short-Cut für minipages,
+\newcommand{\minipend}{\end{minipage}}               % für Tabellen-Captions
+
 \begin{document}
 
 \include{DO_Protokoll_title} 	% Titelseite
 
 \tableofcontents
 
-\include{DO_Protokoll_einf} 	% Einführung
+\include{DO_Protokoll_einf} % Einführung
 \input{DO_Protokoll_aufg}		% Aufgabenstellung
 \input{DO_Protokoll_phys}		% Physikalischer Hintergrund
 \input{DO_Protokoll_df}			% Durchführung
