--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -66,7 +66,7 @@ Es handelt sich hier um eine aktive Sonde, die über ein Leichtleiterkabel an ei
 	\end{center}
 \vspace{5mm}				
 
-Die Drehung der zylindrischen  wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt.
+Die Drehung der zylindrischen Ionenstrahlkammer wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt.
 
 \subsection{Abschätzung der Dosisleistung für $\gamma$-Strahler}
 
