Add some Error-Calculus and contents

--- a/DO/Protokoll/DO_Protokoll_aufg.tex
+++ b/DO/Protokoll/DO_Protokoll_aufg.tex
@@ -3,13 +3,13 @@ Im Experiment werden wir die folgenden Aufgabenstellungen bearbeiten:
 \subsection{Strahlenschutzkontrollmessungen}
 Zunächst bestimmen wir die Dosisleistung in den Bestrahlungsräumen bei geschlossener und geöffneter Quelle an Positionen, an denen später gemessen wird und an denen wir uns häufig aufhalten werden. Dies hat den Zweck der Überwachung der durch die Experimentatoren aufgenommenen Dosis und des Strahlungshintergrundes, welcher die spätere Dosismessung beeinflussen kann. Dabei werden wir diskutieren wie lange man sich an einer Position aufhalten kann, um die gesetzlich geforderten Strahleschutzwerte einzuhalten.
 
-\subsection{Ionisationskammer}
+\subsection{Winkelabhängigkeit einer Ionisationskammer}
 Mit Hilfe einer Stielkammer ($V = 30,0\ cm^3$) soll die Richtungsabhängigkeit der Ionisationskammer bei einem festem Abstand ($d=0.5\ m$) und variablem Azimutalwinkel $\phi$ untersucht werden.
 Dies dient der Ermittlung der optimalen Ausrichtung der Kammer zur Bestimmung der Referenzdosisleistung für die spätere OSL-Dosimetrie.
 
 \subsection{Abschätzung der Dosisleistung für $\gamma$-Strahler}
 Für eine $^{137}Cs$-Quelle soll die Dosisleistung für festen Abstand ($d=0.5\ m$) und unter dem oben ermittelten Winkel $\phi$ als Referenzdosis bestimmt werden. Dabei kann
-\begin{equation}
+\begin{equation} \label{eq:dosisleistung}
 	\dot{D}=\frac{A \cdot \Gamma}{d^2}
 \end{equation}
 abgeschätzt werden. Dabei sind:
@@ -17,14 +17,14 @@ abgeschätzt werden. Dabei sind:
 \begin{minipage}{.9\textwidth}
 	d: Abstand zur Quelle\\
 	A: Aktivität der Quelle am Versuchstag(22.10.2015), \\
-	Referenzwert $A(27.02.2008) = 5,0\ GBq$\\
+	Referenzwert $A(27.02.2008) = 5,0\ GBq \equiv A_0$\\
 	$\Gamma$: Dosisleistungskonstante
 	
 	%----------------------------------------Tabelle einfügen---------------------------------
 \end{minipage}
 \end{center}
 
-\subsection{OSL-Dosimetrie}
+\subsection{Dosismessung mit BeO$max$ und Abstandsquadratsgesetz}
 Wir werden anschließend mit Hilfe des BeO\textit{max}-OSL-Dosimetriesystems eine Dosismessung vornehmen. Da dieses Messsystem ein relatives Vorgehen verlangt, wird die Messung in zwei Schritten vorgenommen: 1) der Kalibrierung mit einer bekannten Dosis ($d=0.5\ m$) durch Ermittlung des Ansprechvermögens $\epsilon$ und 2) der Dosisbestimmung einer unbekannten Dosis ($d$ variabel). Dabei untersuchen wir gleichzeitig die Gültigkeit des Abstandsquadratsgesetzes.
 
 \subsection{Winkelabhängigkeit der kollimierten Quelle}
