--- a/DO/Protokoll/DO_Protokoll_phys.tex
+++ b/DO/Protokoll/DO_Protokoll_phys.tex
@@ -41,9 +41,9 @@ Will man berücksichtigen, dass die Schädigung biologischen Gewebes sowohl von 
 \end{equation}
 \end{definition}
 
-\subsection{Aktivitätsgrößen}
+\subsection{Aktivität}
 Um die Dosisleistung für die gegebenen $\gamma$-Strahler in Aufgabe 2.3 abzuschätzen, benötigen wir die \underline{Aktivität A} als Maß für die Anzahl der spontanen Kernumwandlungen pro Zeiteinheit. Mit dem exponentiellen Zerfallsgesetz erhalten wir:
-\begin{equation}
+\begin{equation} \label{eq:aktivitaet}
 	A(t)=A(t=0) \cdot \left(\frac{1}{2}\right)^{\frac{t}{T_{1/2}}}, [A] = 1/s \equiv Bq \textrm{(Bequerel)}
 \end{equation}
 Hier bei ist $T_{1/2}$ die Halbwertszeit des gegebenen Isotops.
