--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -7,28 +7,29 @@ Im Zweiten Schritt haben wir mittels vier der BeO-Sonden, die von der Betreuerin
 	
 \minipanf
 	\begin{center}
-        	\begin{tabular}{l|c|c|c}
-		\textbf{Ort} & \textbf{\.D} [$\mu$Sv/h] & \textbf{\.D} [mSv/a]  & \textbf{t$_{max}$} [min/d]\\ 
-					\hline  Arbeitsplatz (vor PC) & 0,15  &   1,31 & 750,61\\ 
-						50cm hinter Quelle    & 0,77  &   6,75 & 146,61\\ 
-						50cm rechts der Quelle& 2,28  &  19,97 &  49,38\\ 									50cm links der Quelle & 2,41  &  21,11 &  46,72\\ 
-						50cm vor der Quelle   & 6,34  &  55,53 &  17,76\\ 
-						8cm hinter der Quelle & 5,20  &  45,55 &  21,65\\ 
-						8cm vor der Quelle    & 61,20 & 536,11 &   1,84\\
-					\hline  50cm hinter Quelle    & 1,06  &   9,29 & 106,22\\
-						50cm rechts der Quelle& 2,68  &  23,48 &  42,01\\ 
-						50cm links der Quelle & 3,22  &  28,71 &  34,97\\
+					\begin{tabular}{l|c|c|c}
+								\textbf{Ort} & \textbf{\.D} [$\mu$Sv/h] & \textbf{\.D} [mSv/a]  & \textbf{t$_{max}$} [min/d]\\ 
+						\hline  Arbeitsplatz (vor PC) & 0,15  &   1,31 & 750,61\\ 
+								50cm hinter Quelle    & 0,77  &   6,75 & 146,61\\ 
+								50cm rechts der Quelle& 2,28  &  19,97 &  49,38\\ 
+								50cm links der Quelle & 2,41  &  21,11 &  46,72\\ 
+								50cm vor der Quelle   & 6,34  &  55,53 &  17,76\\ 
+								8cm hinter der Quelle & 5,20  &  45,55 &  21,65\\ 
+								8cm vor der Quelle    & 61,20 & 536,11 &   1,84\\
+						\hline  50cm hinter Quelle    & 1,06  &   9,29 & 106,22\\
+								50cm rechts der Quelle& 2,68  &  23,48 &  42,01\\ 
+								50cm links der Quelle & 3,22  &  28,71 &  34,97\\
 					\end{tabular}	
 					\captionof{table}{Messtabelle für Dosisleistung an verschiedenen Orten und der daraus resultierenden maximalen Verweildauer pro Tag}
 					\label{dft:Arbeitsplatz}
 					\vspace{8mm}
 					\begin{tabular}{l|c|c|c}
-						\textbf{Ort} & \textbf{BeO-Nr.} & \textbf{LS} [mVs] & \textbf{D} [mGy] \\
+								\textbf{Ort} & \textbf{BeO-Nr.} & \textbf{LS} [mVs] & \textbf{D} [mGy] \\
 						\hline  \"{}Mitfahrer vor Quelle\" & 003337 & 14,19 & 0,5028 \\
-						Auf Steckerleiste:                &        &       &        \\
-						 \hspace{3mm} 1,8m vor Quelle     & 003353 & 1,73  & 0,0587 \\
-						 \hspace{3mm} neben Quelle        & 003350 & 1,14  & 0,0437 \\
-						 \hspace{3mm} hinter Quelle       & 003376 & 0,19  & 0,0066 \\
+								Auf Steckerleiste:                &        &       &        \\
+								 \hspace{3mm} 1,8m vor Quelle     & 003353 & 1,73  & 0,0587 \\
+								 \hspace{3mm} neben Quelle        & 003350 & 1,14  & 0,0437 \\
+								 \hspace{3mm} hinter Quelle       & 003376 & 0,19  & 0,0066 \\
 					\end{tabular}
 					\captionof{table}{BeO-Sensordaten, die über zwei Tage im Versuchsraum gesammelt wurden}
 					\label{dft:Raum}
@@ -66,7 +67,7 @@ Es handelt sich hier um eine aktive Sonde, die über ein Leichtleiterkabel an ei
 	\end{center}
 \vspace{5mm}				
 
-Die Drehung der zylindrischen Ionenstrahlkammer wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt.
+Die Drehung der zylindrischen  wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt.
 
 \subsection{Abschätzung der Dosisleistung für $\gamma$-Strahler}
 
@@ -102,7 +103,7 @@ Nun widmen wir uns den Messergebnissen verschiedener Abstände. Verwendet wurden
 \minipanf
 	\begin{center}	
 		\begin{tabular}{c|c|c|c|c}
-				\textbf{d} [m] & BeO-Nr. & \textbf{LS$_0$} [mVs] & \textbf{LS} [mVs] & \textbf{D} [mGy] \\
+					\textbf{d} [m] & BeO-Nr. & \textbf{LS$_0$} [mVs] & \textbf{LS} [mVs] & \textbf{D} [mGy] \\
 			\hline  
 								& 003305 & 0,65 & 1,99 & 0,0853\\
 						0,3		& 003398 & 0,86 & 2,52 & 0,0863\\
@@ -114,15 +115,15 @@ Nun widmen wir uns den Messergebnissen verschiedener Abstände. Verwendet wurden
 								& 003395 & 1,04 & 2,09 & 0,0870\\
 								& 003325 & 2,16 & 2,99 & 0,1415\\
 			\hline  
-                        				        & 003305 & 0,66 & 2,84 & 0,0908\\
-        				        0,5             & 003398 & 0,85 & 3,86 & 0,0913\\
-				                                & 003312 & 0,82 & 3,18 & 0,0912\\
-                                				& 003372 & 0,77 & 3,34 & 0,0918\\
+                                & 003305 & 0,66 & 2,84 & 0,0908\\
+                        0,5     & 003398 & 0,85 & 3,86 & 0,0913\\
+                                & 003312 & 0,82 & 3,18 & 0,0912\\
+                                & 003372 & 0,77 & 3,34 & 0,0918\\
             \hline
-				                                & 003397 & 0,68 & 2,01 & 0,0954\\
-                				0,6             & 003364 & 0,80 & 2,92 & 0,0957\\
-        				                        & 003388 & 0,67 & 3,32 & 0,1134\\
-                                				& 003338 & 0,62 & 3,13 & 0,0932\\
+                                & 003397 & 0,68 & 2,01 & 0,0954\\
+                        0,6     & 003364 & 0,80 & 2,92 & 0,0957\\
+                                & 003388 & 0,67 & 3,32 & 0,1134\\
+                                & 003338 & 0,62 & 3,13 & 0,0932\\
             \hline
 								& 003312 & 0,82 & 2,48 & 0,1005\\
 						0,7		& 003305 & 0,69 & 2,36 & 0,1008\\
@@ -135,7 +136,7 @@ Nun widmen wir uns den Messergebnissen verschiedener Abstände. Verwendet wurden
 								& 003338 & 0,61 & 2,70 & 0,1004\\
 			\hline  
 								& 003325 & 2,18 & 2,15 & 0,1019\\
-						0,905   	& 003395 & 1,05 & 2,38 & 0,0988\\
+						0,905   & 003395 & 1,05 & 2,38 & 0,0988\\
 								& 003332 & 0,69 & 3,05 & 0,1056\\
 								& 003302 & 0,91 & 2,50 & 0,1056\\
 			\hline  
@@ -163,12 +164,12 @@ Zuletzt interessiert uns die Strahlaufweitung unserer Quelle. Dafür nahmen acht
 	\begin{center}
 		\begin{tabular}{c|c|c|c|c}
 				\textbf{BeO-Nr.}& \textbf{s} [cm] & \textbf{LS$_0$} [mVs] & \textbf{LS} [mVs] & \textbf{D} [mGy] \\
-		 \hline 	003338 &  1 & 0,62 & 6,17 & 0,2289 \\
+		 \hline 003338 &  1 & 0,62 & 6,17 & 0,2289 \\
 				003302 &  3 & 0,92 & 5,43 & 0,2292 \\
 				003337 &  5 & 0,48 & 6,36 & 0,2252 \\
 				003364 &  7 & 0,74 & 4,98 & 0,2250 \\
 				003353 &  9 & 0,44 & 5,10 & 0,1731 \\
-				003388 & 11 & 0,68 & 2,15 & 0,0808 \\
+				003388 & 11	& 0,68 & 2,15 & 0,0808 \\
 				003332 & 13 & 0,73 & 1,37 & 0,0475 \\
 				003376 & 15 & 0,59 & 0,74 & 0,0260 \\
 		\end{tabular}
