--- a/DO/Protokoll/DO_Protokoll_phys.tex
+++ b/DO/Protokoll/DO_Protokoll_phys.tex
@@ -3,7 +3,7 @@
 Zunächst definieren wir einige Größen zur Charakterisierung  von Strahlungsfeldern.
 
 \begin{definition}[Teilchenbezogene Größen].\\
-Die \underline{Teilchenflussdichte} $\varphi$ ist defininiert als:
+Die \underline{Teilchenflussdichte} $\varphi$ ist definiert als:
 \begin{equation*}
 	\varphi = \frac{\mathrm{d}^2N}{\mathrm{d}A_{\perp} \cdot \mathrm{d}t},\ [\varphi] = 1/m^2s
 \end{equation*}
@@ -48,8 +48,6 @@ Um die Dosisleistung für die gegebenen $\gamma$-Strahler in Aufgabe 2.3 abzusch
 \end{equation}
 Hier bei ist $T_{1/2}$ die Halbwertszeit des gegebenen Isotops.
 
-\subsection{Abstandsquadratsgesetz}
-
 \subsection{Messprinzip: Ionisationskammer}
 Grob gesprochen ist eine Ionisationskammer ein (beliebig geformter) Kondensator, dessen Dielektrikum gasförmig (in unserem Fall Luft) vorliegt. Tritt ionisierende Strahlung in das Kammervolumen, so entstehen durch Wechselwirkung mit den Gasteilchen Elektronen-Ionen-Paare (Primärteilchen). Die dabei herausgelösten Ladungsträger gelangen nun im Idealfall durch Coulomb-Wechselwirkung zu einer Kondensatorplatte, wo sie nun als Stromfluss I nachgewiesen werden können. Wie wir später sehen werden ist der Stromfluss proportional zu unserer zu ermittelnden Dosis.\\ 
 Ist die Kondensatorspannung (und somit auch die Feldstärke) zu niedrig, bewegen sich die geladenen Teilchen zu langsam und die Rekombinations-Wahrscheinlichkeit steigt. Ist sie andererseits zu groß, werden die Primärteilchen zu stark beschleunigt, sodass sie lawinenartig weitere Ionisationen auslösen und Sekundärladungsträger erzeugen. Beide Fälle würden die Messung verfälschen, wodurch man eine Kompromisslösung im sogenannten Sättigungsbereich finden muss.\\
@@ -70,9 +68,14 @@ Das heißt für näherungsweise konstante Dosisleistungen im Zeitintervall $\Del
 \end{equation}
 Nun wollen wir noch die Abhängigkeit des Ergebnisses vom Druck p und der Temperatur T berücksichtigen:
 \begin{equation}
-	\rho = \rho_0 \cdot \frac{T_0}{T} \cdot \frac{p}{p_0};
-	\ \rho_0 = 1,20\ \frac{kg}{m^3};\ T_0 = 293,15\ K;\ p_0 = 101,3\ kPa
+	\rho = 1,20 \cdot \frac{T_0}{T} \cdot \frac{p}{p_0} \frac{kg}{m^3},
+	\ T_0 = 293,15\ K,\ p_0 = 101,3\ kPa
 \end{equation}
-Natürlich hängt die Luftdichte $\rho$ auch von der Luftfeuchte $f$ abhängig. Diese werden wir zwar überwachen, allerdings nicht korrigieren.
 
-\subsection{Messprinzip: BeOMax-Dosimetriesystem}
+\subsection{Dosimetrie vermittels optisch stimulierter Lumineszenz}
+
+Die Funktionsweise der optisch stimulierten Lumineszenz kann über ein Bändermodell erklärt werden. 
+
+
+\subsection{BeO$max$-Funktionsprinzip}
+Wir benutzen hier passive Sonden aus Berylliumoxid als Leuchtstoff. Diese Verbindung hat eine effektive Ordnungszahl von 7,13
