Deleted some physical definitions

--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -104,6 +104,7 @@ Diese Zeiten wurden nur als grobe Orientierungspunkte verwendet und sind aufgrun
 Nun widmen wir uns den Messergebnissen verschiedener Abstände. Verwendet wurden pro vier in der Mitte einer Plexisglas-Platte aufgebrachte BeO-Sensoren. Diese wurden für die in Tabelle \ref{dft:Zeiten} genannten Zeiten bestrahlt. Weiterhin haben wir vier von ihnen von Hand kalibriert.
 Zunächst führen wir eine Kalibrationsmessung durch, um das Ansprechvermögen $\epsilon = (LS - LS_0)/D_{ref}$ zu bestimmen.In Abschnitt \ref{sec:Ionkammer} haben wir dafür die Dosisleistung bei $d=0,5\ m$ und $\alpha = 180$ \textdegree  mit $\dot{D}_{ref} = (0,309 \pm 0.001)\mu Gy /s$ bestimmt. Es ergibt sich durch die längere Messzeit von $\Delta t = 292,8\ s$ eine Dosis von $D_{ref} = \dot{D}_{ref} \cdot \Delta t = (90,5 \pm 0,4)\mu Gy$. Wobei ein systematischer Fehler bei der Zeitmessung von $\Delta(\Delta t) = 0,5s$ als Reaktionszeit angenommen wurde. Wir wiederholen nun die Messung mit dem Beo\textit{max}-System und bestimmen das Ansprechvermögen:\\
 
+\minipanf
 	\begin{center}	
 		\begin{tabular}{c|c|c|c|c}
 					\textbf{d} [m] & BeO-Nr. & \textbf{LS$_0$} [mVs] & \textbf{LS} [mVs] & \textbf{$\epsilon$} [$\frac{mVs}{\mu Gy}$] \\
@@ -113,9 +114,11 @@ Zunächst führen wir eine Kalibrationsmessung durch, um das Ansprechvermögen $
 								& 003372 & 0,77 & 3,34 & 0,028\\
 								& 003312 & 0,81 & 3,18 & 0,026\\								
 		\end{tabular}
+		\captionof{table}{Bestimmung des Ansprechvermögens}
 	\end{center}
-
+\minipend
 \vspace{3mm}
+
 \minipanf
 	\begin{center}	
 		\begin{tabular}{c|c|c|c|c}
