table 1 contents changed

--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -2,7 +2,7 @@
 
 \subsection{Strahlenschutzkontrollmessungen}
 Im Ersten Arbeitsschritt haben wir die Dosen an verschiedenen Stellen im Versuchsraum vermessen. Dabei ist zu beachten, dass das verwendete Dosimeter Messwerte über einen bestimmten Zeitraum (ca. 30 Sekunden) mittelt. Außerdem handelt es sich um die Dosen, welche am morgen zum Arbeitsbeginn (Tabelle \ref{dft:Arbeitsplatz}) gemessen wurden. 
-Im Zweiten Schritt haben wir mittels vier der BeO-Sonden, die von der Betreuerin am 21.10.2015 um 16:30 Uhr im Raum verteilt deponiert wurden, am Nachmittag des Versuchstages (23.10.15) um 15 Uhr ausgelesen. (Tabelle \ref{dft:BeOSonden}) \\
+Im Zweiten Schritt haben wir mittels vier der BeO-Sonden, die von der Betreuerin am 21.10.2015 um 16:30 Uhr im Raum verteilt deponiert wurden, am Nachmittag des Versuchstages (23.10.15) um 15 Uhr ausgelesen. (Tabelle \ref{dft:Raum}) \\
 	
 \minipanf
 	\begin{center}
@@ -45,28 +45,28 @@ Es handelt sich hier um eine aktive Sonde, die über ein Leichtleiterkabel an ei
 
 \vspace{5mm}
 	\begin{center}
-		\begin{tabular}{c|c|c|c|c}
-				\textbf{$\alpha$} [\textdegree] & \textbf{d} [m] & \textbf{D$_0$} [$\mu$Gy] & \textbf{\.D$_0$} [$\mu$Gy/s] & \textbf{\.D} [$\mu$ Gy/s] \\ 
-		\hline	180 & 0,50 & 18,29 & 0,304 & 0,308 \\ 
-				150 & 0,50 & 18,26 & 0,304 & 0,308 \\ 
-				120 & 0,50 & 17,94 & 0,299 & 0,303 \\ 
-				90  & 0,50 & 17,66 & 0,294 & 0,297 \\ 
-				60  & 0,50 & 17,49 & 0,292 & 0,295 \\ 
-				30  & 0,50 & 17,19 & 0,287 & 0,290 \\ 
-				0   & 0,50 & 17,24 & 0,288 & 0,291 \\ 
-				330 & 0,50 & 17,38 & 0,290 & 0,293 \\ 
-				300 & 0,50 & 17,52 & 0,292 & 0,295 \\ 
-				270 & 0,50 & 17,81 & 0,297 & 0,300 \\ 
-				240 & 0,50 & 18,13 & 0,302 & 0,306 \\ 
-			    210 & 0,50 & 18,26 & 0,305 & 0,309 \\ 
-		\hline	180 & 0,50 & 18,39 & 0,306 & 0,310 \\ 
+		\begin{tabular}{c|c|c|c|c|c}
+				\textbf{$\alpha$} [\textdegree] & \textbf{d} [m] & \textbf{D$_0$} [$\mu$Gy] & \textbf{\.D$_0$} [$\mu$Gy/s] & \textbf{\.D} [$\mu$ Gy/s] & $\Delta$ \textbf{\.D} [$\mu$Gy/s]\\ 
+		\hline	180 & 0,50 & 18,29 & 0,3048 & 0,3089 & 0,00073 \\ 
+				150 & 0,50 & 18,26 & 0,3043 & 0,3084 & 0,00073 \\ 
+				120 & 0,50 & 17,94 & 0,2990 & 0,3030 & 0,00072 \\ 
+				90  & 0,50 & 17,66 & 0,2943 & 0,2982 & 0,00072 \\ 
+				60  & 0,50 & 17,49 & 0,2915 & 0,2954 & 0,00071 \\ 
+				30  & 0,50 & 17,19 & 0,2865 & 0,2903 & 0,00071 \\ 
+				0   & 0,50 & 17,24 & 0,2873 & 0,2911 & 0,00071 \\ 
+				330 & 0,50 & 17,38 & 0,2897 & 0,2935 & 0,00071 \\ 
+				300 & 0,50 & 17,52 & 0,2920 & 0,2959 & 0,00071 \\ 
+				270 & 0,50 & 17,81 & 0,2968 & 0,3008 & 0,00072 \\ 
+				240 & 0,50 & 18,13 & 0,3022 & 0,3062 & 0,00073 \\ 
+			    210 & 0,50 & 18,26 & 0,3043 & 0,3084 & 0,00073 \\ 
+		\hline	180 & 0,50 & 18,39 & 0,3065 & 0,3106 & 0,00073 \\ 
 		\end{tabular} 
 		\captionof{table}{Messwerte aus der Winkelabhängigkeit der Zylinderkammer}
 		\label{dft:Winkel}
 	\end{center}
 \vspace{5mm}				
 
-Die Drehung der zylindrischen Ionenstrahlkammer wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt.
+Die Drehung der zylindrischen Ionenstrahlkammer wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt. Während der Messungen betrugen die Temperatur im Raum $T = 294,75K$, der Druck $p = 100,52kPa$ und die Luftfeuchtigkeit 54\%.
 
 \subsection{Abschätzung der Dosisleistung für $\gamma$-Strahler}
 
